--- a/Webpage/Project 1 ( tribute ).html
+++ b/Webpage/Project 1 ( tribute ).html
@@ -11,7 +11,7 @@
         <body>
             <h1>SUNDAR PICHAI</h1>
             <div>
-               <img id="SundarPichai" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/Sundar_Pichai_WEF_2020.png/220px-Sundar_Pichai_WEF_2020.png" border=4  alt="Elon Musk" height="600px"width="100px"  class="center" >
+               <img id="SundarPichai" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/Sundar_Pichai_WEF_2020.png/220px-Sundar_Pichai_WEF_2020.png" border=4  alt="Sundar Pichai" height="600px"width="100px"  class="center" >
             </div>
             <link rel="stylesheet" href="style_css/style.css">
             
